# rust-cli-starter

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml
.github/workflows/: ci.yml
src/: cli.rs  config.rs  error.rs  main.rs  output.rs
src/commands/: config.rs  fetch.rs  hello.rs  mod.rs
