[package]
name = "rust-cli-starter"
version = "0.1.0"
edition = "2021"
authors = ["bhupendra05 <bgurjar05.bg@gmail.com>"]
description = "Production Rust CLI starter — clap v4, tracing, config, color output, Docker"
license = "MIT"
repository = "https://github.com/bhupendra05/rust-cli-starter"
keywords = ["cli", "template", "starter"]
categories = ["command-line-utilities"]

[[bin]]
name = "mycli"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive", "env", "color"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Configuration
config = { version = "0.14", features = ["toml"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Terminal output
colored = "2"
indicatif = "0.17"
console = "0.15"

# HTTP client (optional — remove if not needed)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
